udpate generator sentence of bulk insert